tests/files/type_checker_tests/should_fail/039.cmdr
//Should fail when exponentiating incompatible types
x = 3 ** false;
